--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -49,6 +50,9 @@ dependencies {
 
     //BIBLIOTECA MVVM
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    //GLIDE
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
