--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //BIBLIOTECA MVVM
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1")
 
     //GLIDE
     implementation 'com.github.bumptech.glide:glide:4.13.0'
